[project]
name = "famly-fetch"
version = "1.0.0"
description = "Fetch your (kid's) images from famly.co"
authors = [
    { name = "Morten Siebuhr" },
    { name = "Jacob Bunk Nielsen" },
    { name = "Zenia Christensen" },
    { name = "Jakub (github:pay64k)" },
]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["piexif==1.1.3"]

[project.scripts]
famly-fetch = "fetch:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["api_client", "fetch"]
